<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FoodApp</string>
    <string name="logo_description">Logo de l’application</string>
    <string name="inscription_link"><![CDATA[<u>Pas encore de compte ? Inscrivez-vous</u>]]></string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="btn_sign_in">Se connecter</string>
    <string name="tv_go_sign_up">Pas de compte ? Inscrivez-vous</string>
    <string name="btn_sign_up">S’inscrire</string>
    <string name="hint_name">Nom complet</string>
    <string name="error_name_required">Le nom est requis</string>
    <string name="error_email_already_registered">Cet email est déjà enregistré</string>
    <string name="msg_registered">Inscription réussie !</string>

    <string name="error_email_required">L’email est requis</string>
    <string name="error_password_required">Le mot de passe est requis</string>
    <string name="error_incorrect_credentials">Identifiants incorrects</string>

    <string name="title_menu">Menu</string>
    <string name="title_cart">Panier</string>
    <string name="title_contact">Contact</string>
    <string name="title_profile">Profil</string>
    <string name="desc_dish_image">Image du plat</string>
    <string name="add_to_cart">Ajouter au panier</string>
    <string name="supplements_title">Choisissez vos suppléments</string>
    <string name="btn_cancel">Annuler</string>
    <string name="btn_confirm_order">Valider la commande</string>
    <string name="total_format">Total : %.2f $</string>
    <string name="remove_item">Supprimer cet article</string>
    <string name="decrease_qty">Diminuer la quantité</string>
    <string name="increase_qty">Augmenter la quantité</string>
    <string name="btn_add_to_cart">Ajouter au panier</string>

        <string name="label_name">Nom :</string>
        <string name="label_email">Email :</string>
        <string name="label_phone">Téléphone :</string>
        <string name="label_address">Adresse :</string>
        <string name="label_categories">Catégories</string>
        <string name="label_vegetarian">Végétarien ?</string>
        <string name="btn_edit_info">Modifier les coordonnées</string>
        <string name="btn_save_info">Enregistrer</string>
    <string name="chip_cuisine">Cuisine Maghrébine</string>
    <string name="chip_desserts">Desserts</string>
    <string name="hint_no_name">Aucun nom disponible</string>
    <string name="hint_no_email">Aucun email disponible</string>
    <string name="hint_no_phone">Aucun téléphone disponible</string>
    <string name="hint_no_address">Aucune adresse disponible</string>
    <string name="contact_title">Contactez-nous</string>

    <!-- Labels / hints des champs -->
    <string name="placeholder_name">Ex. Marie Dupont</string>

    <string name="placeholder_email">aminesouid20@gmail.com</string>
    <string name="button_send">Envoyer</string>
    <string name="label_subject">Sujet</string>
    <string name="placeholder_subject">Sujet de votre message</string>

    <string name="label_message">Votre message</string>
    <string name="placeholder_message">Écrivez votre message ici…</string>
    <!-- Carte “Préférences alimentaires” -->
    <string name="label_diet_preferences">Préférences alimentaires</string>
    <string name="chip_vegetarian">Végétarien</string>
    <string name="chip_vegan">Végan</string>
    <string name="chip_gluten_free">Sans gluten</string>
    <string name="desc_avatar">Photo de profil</string>


        <string name="hint_phone">Téléphone</string>
        <string name="hint_address">Adresse</string>
        <string name="label_preferences">Préférences alimentaires</string>
        <string name="chip_vegetarien">Végétarien</string>
        <string name="chip_sans_gluten">Sans gluten</string>


        <string name="error_phone_required">Le numéro de téléphone est requis</string>
        <string name="error_address_required">L’adresse est requise</string>

</resources>
