<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/menuFragment">

    <fragment
        android:id="@+id/menuFragment"
        android:name="com.example.food.ui.main.MenuFragment"
        android:label="@string/title_menu" />

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.food.ui.main.CartFragment"
        android:label="@string/title_cart" />

    <fragment
        android:id="@+id/contactFragment"
        android:name="com.example.food.ui.main.ContactFragment"
        android:label="@string/title_contact" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.food.ui.main.ProfileFragment"
        android:label="@string/title_profile" />

</navigation>
