<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:padding="8dp">

<!-- 1. Nom du plat -->
<TextView
    android:id="@+id/tvCartDishName"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textAppearance="?attr/textAppearanceTitleMedium"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btnRemoveItem"
    tools:text="Pizza Margherita" />

<ImageButton
    android:id="@+id/btnRemoveItem"
    android:layout_width="32dp"
    android:layout_height="32dp"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/remove_item"
    app:tint="?attr/colorError"
    app:srcCompat="@android:drawable/ic_menu_delete"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

<TextView
    android:id="@+id/tvCartSupplements"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textAppearance="?attr/textAppearanceBodySmall"
    android:layout_marginTop="4dp"
    app:layout_constraintTop_toBottomOf="@id/tvCartDishName"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:text="+ Fromage supplémentaire, + Sauce piquante" />

<LinearLayout
    android:id="@+id/qtyContainer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="8dp"
    app:layout_constraintTop_toBottomOf="@id/tvCartSupplements"
    app:layout_constraintStart_toStartOf="parent">

    <ImageButton
        android:id="@+id/btnDecreaseQty"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/decrease_qty"
        app:tint="?attr/colorPrimary"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <TextView
        android:id="@+id/tvCartQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        tools:text="1" />

    <ImageButton
        android:id="@+id/btnIncreaseQty"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/increase_qty"
        app:tint="?attr/colorPrimary"
        app:srcCompat="@android:drawable/ic_media_next" />
</LinearLayout>

<TextView
    android:id="@+id/tvCartItemSubtotal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?attr/textAppearanceTitleSmall"
    app:layout_constraintTop_toBottomOf="@id/qtyContainer"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="8dp"
    tools:text="11.49 $" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
